# glogger

./: .gitignore  BUILD STEPS.md  LICENSE  MANIFEST.in  README.md  build_msgs.txt  changelog.md  glog.json  glog.py  gslog.toml  hatch_build.py  hatchling.toml  junk.py  mastodon.py  my_build_config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  template.md
GSLogger.egg-info/: PKG-INFO  SOURCES.txt
Glogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ch-logs/: 2024-09-18-11-32-ADDED.md  2024-09-18-11-33-CHANGED.md  2024-09-19-08-07-CHANGED.md  2024-09-19-08-18-FIXED.md  2024-09-19-08-48-FIXED.md  2024-09-19-12-27-ADDED.md  2024-09-19-12-31-CHANGED.md  2024-09-19-13-15-ADDED.md  log_store.json
glogger/: glog.json  glog.py  template_sections.md
gslogger/: changelog.md  extras.py  glog.json  glog.py  glog.toml  jin.py  template.md  template_header.md  template_section.md  template_sections.md  version.py
gslogger/ch-logs/: 2024-09-24-13-18-FIXED.md  2024-09-24-13-22-ADDED.md  2024-09-24-13-24-FUTURE UPDATES.md  2024-09-24-13-30-FUTURE UPDATES.txt  2024-09-24-13-34-CHANGED.txt  2024-09-27-16-39-33-REMOVED.txt  2024-09-27-16-40-40-CHANGED.txt  log_store.json  templates.json
src/gslogger/: __init__.py  changelog.md  extras.py  glog.json  glog.py  jin.py  version.py
src/gslogger/ch-logs/: 2024-09-27-17-38-46-FIXED.txt  changelog.md  log_store.json
