[project]
    name = "gslogger"
    dynamic = ["version"]

[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[tools.setuptools]
#    dependencies = ["toml", "jinja2"]
    dependencies = ["toml>=0.10", "jinja2>=3.1"]

[tool.setuptools.packages.find]
    where = ["gslogger"]
    include = ["*"]

[tool.setuptools.dynamic]
    version = {attr = "glog.__version__"}

[project.entry-points."console_scripts"]
    glog = "gslogger.glog:main"

[tool.black]
    line-length = 88

[tool.isort]
    profile = "black"
