[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires = []


[project]
name = "your-app"
dynamic = ["version", "license", "authors", "maintainers"]
authors = [{ name = "...", email = "..." },]
maintainers = [{ name = "...", email = "..." },]
description = '...'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["...",]
classifiers = ["...",]
dependencies = ["...",]

[project.urls]
Documentation = "..."
"Source code" = "..."

[tool.hatch.version]
path = "..."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.git",
  "/.venv",
  "/.junk",
  "/.vscode",
  "/docs",
  ".env",
]

[tool.hatch.build.targets.wheel]
packages = ["gslogger"]