[metadata]
    name = "GSLogger"
    dynamic = ["version"]    # version=".".join(str(x) for x in data['version_number']),
    url = "https://github.com/friargregarious/glogger"
    author = Gregory Denyes
    author_email = "Gregory Denyes" <greg.denyes@gmailcom>
    maintainers = [{name = "Gregory Denyes", email = "greg.denyes@gmailcom"},]
    description = "Greg's Simple Changelog Generator"
    long_description = file: README.md
    long_description_content_type = "text/markdown"
    license = Apache-2.0
    license_file = LICENSE
    classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: Apache Software License"
        # "License :: OSI Approved :: Apache-2.0",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",]
    keywords = "project, changelog, development"

[options]
    package_dir = gslogger
    packages = find:
    install_requires = ["toml", "jinja2",]
    # python_requires = >=3.10

[options.packages.find]
    where = ["gslogger"]

# [options.extras_require]
#     dev = ["black", "isort", "flake8"]

[options.entry_points]
    console_scripts = ["glog = gslogger.glog:main",]

[bdist_wheel]
    universal = 1

# [flake8]
#     max-line-length = 88

# [isort]
#     profile = black

# [black]
#     line-length = 88

# [tool:pytest]
#     addopts = --ignore=gslogger

