[metadata]
    name = GSLogger
    dynamic = ["version"]  # version=".".join(str(x) for x in data['version_number']),
    version = {attr: data['version_number'] for attr in dynamic}
    url = https://github.com/friargregarious/glogger
    author = Gregory Denyes
    author_email = greg.denyes@gmail.com
    maintainers =
        Gregory Denyes <greg.denyes@gmail.com>
    description = "Greg's Simple Changelog Generator"
    long_description = file: README.md
    long_description_content_type = text/markdown
    license = Apache-2.0
    license_file = LICENSE
    classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Topic :: Software Development :: Build Tools
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
    keywords = project, changelog, development

[options]
    python_requires = >=3.10
    install_requires =
        jinja2>=3.1
        toml>=0.10
    package_dir =
        =gslogger
    packages = find:

[options.packages.find]
    where = ["gslogger"]

[options.entry_points]
    console_scripts =
        glog = gslogger.glog:main
